--- a/Assets/Backend/css/admin.css
+++ b/Assets/Backend/css/admin.css
@@ -4606,3 +4606,27 @@ span.sa-spinner-open-left {
     cursor: move;
     background: rgba(240, 248, 255, 1)
 }
+
+
+/* 
+Tabd Ols Render Error Fixed issues 
+*/
+
+.oxi-template-old-admin-wrap .row.form-group{
+    padding-right: 15px;
+    padding-left: 15px;
+}
+.oxi-template-old-admin-wrap .minicolors-theme-bootstrap .minicolors-input {
+    float: none;
+    padding-left: 40px !important;
+}
+
+.oxi-template-old-admin-wrap .minicolors-theme-bootstrap .minicolors-swatch {
+    z-index: 2;
+    top: 4px;
+    left: 4px;
+    width: 30px;
+    height: 30px;
+    border-radius: 4px;
+    border: solid 0px #ccc;
+}
