--- a/Assets/Backend/css/admin.css
+++ b/Assets/Backend/css/admin.css
@@ -4630,3 +4630,18 @@ Tabd Ols Render Error Fixed issues
     border-radius: 4px;
     border: solid 0px #ccc;
 }
+.oxi-template-old-admin-wrap .font-select {
+    font-size: 16px;
+}
+.oxi-template-old-admin-wrap .font-select:before {
+    height: 40px;
+    padding: 2px 8px;
+}
+.oxi-template-old-admin-wrap .font-select > span {
+    height: 40px;
+    line-height: 34px;
+    padding: 2px 8px 2px 8px;
+}
+.oxi-template-old-admin-wrap .font-select .fs-drop {
+    top: 40px;
+}
