--- a/Assets/Frontend/css/style.css
+++ b/Assets/Frontend/css/style.css
@@ -22,3 +22,207 @@
     padding-left: 0;
     padding-right: 0;
 }
+.oxi-tab-clearfix:before, .oxi-tab-clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+    flex-basis: 0;
+    order: 1;
+}
+.oxi-tab-header-horizontal[class^='oxi-tab-header-top-'], 
+.oxi-tab-header-horizontal[class*=' oxi-tab-header-top-'],
+.oxi-tab-header-horizontal[class^='oxi-tab-header-bottom-'], 
+.oxi-tab-header-horizontal[class*=' oxi-tab-header-bottom-']{
+    display: flex;
+
+    -webkit-flex-flow: column wrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
+}
+.oxi-tab-header-horizontal[class^='oxi-tab-header-bottom-'], 
+.oxi-tab-header-horizontal[class*=' oxi-tab-header-bottom-']{
+    display: flex;
+    -webkit-flex-flow: column-reverse wrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
+}
+.oxi-tabs-ultimate-header-wrap,
+.oxi-tabs-ultimate-content-wrap{
+    width: 100%
+}
+.oxi-tabs-ultimate-header{
+    overflow: hidden;
+}
+
+.oxi-tab-header-horizontal.oxi-tab-header-top-left-position .oxi-tabs-ultimate-header-wrap,
+.oxi-tab-header-horizontal.oxi-tab-header-bottom-left-position .oxi-tabs-ultimate-header-wrap{
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: baseline;
+    align-content: stretch;
+}
+
+.oxi-tab-header-horizontal.oxi-tab-header-top-right-position .oxi-tabs-ultimate-header-wrap,
+.oxi-tab-header-horizontal.oxi-tab-header-bottom-right-position .oxi-tabs-ultimate-header-wrap{
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: flex-end;
+    align-items: baseline;
+    align-content: stretch;
+}
+.oxi-tab-header-horizontal.oxi-tab-header-top-center-position .oxi-tabs-ultimate-header-wrap,
+.oxi-tab-header-horizontal.oxi-tab-header-bottom-center-position .oxi-tabs-ultimate-header-wrap{
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: center;
+    align-items: baseline;
+    align-content: stretch;
+}
+.oxi-tab-header-horizontal.oxi-tab-header-top-compact-position .oxi-tabs-ultimate-header-wrap,
+.oxi-tab-header-horizontal.oxi-tab-header-bottom-compact-position .oxi-tabs-ultimate-header-wrap{
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: baseline;
+    align-content: stretch;
+}
+.oxi-tab-header-horizontal .oxi-tabs-ultimate-header,
+.oxi-tab-header-horizontal .oxi-tabs-ultimate-header{
+    display: flex;
+}
+.oxi-tab-header-horizontal.oxi-tab-header-top-compact-position .oxi-tabs-ultimate-header,
+.oxi-tab-header-horizontal.oxi-tab-header-bottom-compact-position .oxi-tabs-ultimate-header,
+.oxi-tab-header-horizontal.oxi-tab-header-top-compact-position .oxi-tabs-header-li,
+.oxi-tab-header-horizontal.oxi-tab-header-bottom-compact-position .oxi-tabs-header-li{
+    width: 100%;
+}
+
+.oxi-tab-header-vertical[class^='oxi-tab-header-left-'], 
+.oxi-tab-header-vertical[class*=' oxi-tab-header-left-'],
+.oxi-tab-header-vertical[class^='oxi-tab-header-right-'], 
+.oxi-tab-header-vertical[class*=' oxi-tab-header-right-']{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: baseline;
+    align-content: stretch;
+}
+.oxi-tab-header-vertical[class^='oxi-tab-header-left-'], 
+.oxi-tab-header-vertical[class*=' oxi-tab-header-left-'],
+.oxi-tab-header-vertical[class^='oxi-tab-header-right-'], 
+.oxi-tab-header-vertical[class*=' oxi-tab-header-right-']{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: stretch;
+}
+
+
+.oxi-tab-header-vertical.oxi-tab-header-left-center-position, 
+.oxi-tab-header-vertical.oxi-tab-header-right-center-position{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: stretch;
+}
+.oxi-tab-header-vertical.oxi-tab-header-left-bottom-position, 
+.oxi-tab-header-vertical.oxi-tab-header-right-bottom-position{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-end;
+    align-content: stretch;
+}
+.oxi-tab-header-vertical[class^='oxi-tab-header-right-'], 
+.oxi-tab-header-vertical[class*=' oxi-tab-header-right-']{
+    flex-direction: row-reverse;
+}
+.oxi-tab-header-vertical .oxi-tabs-ultimate-header-wrap{
+    width: 20%;
+}
+.oxi-tab-header-vertical .oxi-tabs-ultimate-content-wrap{
+    width: 100%
+}
+
+.oxi-tab-header-vertical[class^='oxi-tab-header-left-'] .oxi-tabs-ultimate-header-wrap, 
+.oxi-tab-header-vertical[class*=' oxi-tab-header-left-'] .oxi-tabs-ultimate-header-wrap,
+.oxi-tab-header-vertical[class^='oxi-tab-header-right-'] .oxi-tabs-ultimate-header-wrap, 
+.oxi-tab-header-vertical[class*=' oxi-tab-header-right-'] .oxi-tabs-ultimate-header-wrap{
+    display: flex;
+    flex-direction: column;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-header-li[class^='oxi-tab-header-aditional-'], 
+.oxi-tabs-ultimate-style .oxi-tabs-header-li[class*=' oxi-tab-header-aditional-']{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-header-li.oxi-tab-header-aditional-top-position, 
+.oxi-tabs-ultimate-style .oxi-tabs-header-li.oxi-tab-header-aditional-top-position{
+    display: flex;
+    flex-direction: column;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-header-li.oxi-tab-header-aditional-right-position, 
+.oxi-tabs-ultimate-style .oxi-tabs-header-li.oxi-tab-header-aditional-right-position{
+    display: flex;
+    flex-direction: row-reverse;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-header-li.oxi-tab-header-aditional-bottom-position, 
+.oxi-tabs-ultimate-style .oxi-tabs-header-li.oxi-tab-header-aditional-bottom-position{
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.oxi-tabs-ultimate-style .oxi-tabs-ultimate-header .oxi-tabs-header-li{
+    cursor: pointer;
+}
+
+.oxi-tabs-ultimate-style .oxi-tabs-ultimate-header .oxi-tabs-header-li-title{
+    font-size: 16px;
+    font-weight: 500;
+    color: #ffffff;
+    margin: 0px 0px 0px 0px;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-ultimate-header .oxi-tabs-header-li-title{
+    font-size: 12px;
+    font-weight: 300;
+    text-align: left;
+    color: #ffffff;
+    margin: 0px 0px 0px 0px;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-ultimate-header .oxi-icons{
+    font-size: 16px;
+     display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    margin: 0px 5px 0px 0px;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-ultimate-header .oxi-tabs-header-li-number{
+    font-size: 16px;
+     display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    margin: 0px 5px 0px 0px;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-ultimate-header .oxi-tabs-header-li-image{
+    width: 16px;
+     margin: 0px 5px 0px 0px;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-ultimate-content,
+.oxi-tabs-ultimate-style .oxi-tabs-body-tabs{
+    width: 100%;
+}
+.oxi-tabs-ultimate-style .oxi-tabs-body-tabs p{
+    margin: 0 0 0 0 ;
+}
