--- a/Assets/Frontend/css/style.css
+++ b/Assets/Frontend/css/style.css
@@ -396,3 +396,24 @@
     display: flex;
     flex-direction: column;
 }
+.oxi-tabs-recent-post{
+    width: 100%;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+}
+.oxi-tabs-recent-post .oxi-tabs-recent-avatar{
+    width: auto;
+    margin: 0 10px;
+}
+
+.oxi-tabs-recent-post .oxi-tabs-recent-postmeta{
+    width: 100%;
+    display: flex;
+}
+
+.oxi-tabs-recent-post .oxi-tabs-recent-body{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
