--- a/Assets/Frontend/css/style.css
+++ b/Assets/Frontend/css/style.css
@@ -404,6 +404,7 @@
 }
 .oxi-tabs-recent-post .oxi-tabs-recent-avatar{
     width: auto;
+    max-width: 65px;
     margin: 0 10px;
 }
 
@@ -413,6 +414,29 @@
 }
 
 .oxi-tabs-recent-post .oxi-tabs-recent-body{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.oxi-tabs-popular-post{
+    width: 100%;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+}
+.oxi-tabs-popular-post .oxi-tabs-popular-avatar{
+    width: auto;
+    max-width: 65px;
+    margin: 0 10px;
+}
+
+.oxi-tabs-popular-post .oxi-tabs-popular-postmeta{
+    width: 100%;
+    display: flex;
+}
+
+.oxi-tabs-popular-post .oxi-tabs-popular-body{
     width: 100%;
     display: flex;
     flex-direction: column;
